[gd_scene load_steps=4 format=3 uid="uid://da8b7n7dgsr43"]

[ext_resource type="Script" path="res://Scripts/Enemies/EnemyBase.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ca8c5sryvf1j2" path="res://Graphics/Enemies/orbinaut.png" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 8)

[node name="EnemyBase" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16384
collision_mask = 0
script = ExtResource("1")

[node name="CollissionMask" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 528384

[node name="HitBox" type="CollisionShape2D" parent="DamageArea"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="orbinaut" type="Sprite2D" parent="."]
texture = ExtResource("2")
hframes = 2
vframes = 2

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1.90735e-06, -1.90735e-06)
scale = Vector2(6.4, 6.4)

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_body_exited"]
